--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "transpile": "swc app --out-dir dist",
+    "serve": "npm run transpile && node server/server.js"
   },
   "dependencies": {
+    "@3d-dice/dice-box-threejs": "^0.0.12",
+    "boardgame.io": "^0.50.2",
+    "esm": "^3.2.25",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.15.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "swc": "^1.0.11",
     "typescript": "^5"
   }
 }
